<resources>
    <string name="app_name">TestForNyblesoft</string>

    <string name="geocodingKey">d24831ec5e6c3f</string>
    <string name="weatherKey">7ce102f6de3c534b8bbcbd492f66caa5</string>
    <string name="units">metric</string>

    <string name="navigationFragmentName">Location</string>
    <string name="listFragmentName">History</string>

    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="temperature">Temperature: </string>
    <string name="pressure">Pressure: </string>
    <string name="humidity">Humidity: </string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="permissions">These permissions are mandatory to get your location. You need to allow them.</string>
    <string name="service">You need to install Google Play Service.</string>
    <string name="connection">You need to connect to the internet.</string>
</resources>
