<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_black"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.DescriptionActivity">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:color="@color/orange"
        android:gravity="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvItemLatitude"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:color="@color/orange"
        android:gravity="center"
        android:text="@string/latitude"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvItemLongitude"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:color="@color/orange"
        android:gravity="center"
        android:text="@string/longitude"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvItemAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:color="@color/orange"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvItemTemperature"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:color="@color/orange"
        android:gravity="center"
        android:text="@string/temperature"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvItemHumidity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:color="@color/orange"
        android:gravity="center"
        android:text="@string/humidity"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvItemPressure"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:color="@color/orange"
        android:gravity="center"
        android:text="@string/pressure"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bBack"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:background="@color/orange"
        android:text="@string/back"
        android:textColor="@android:color/black"
        android:textSize="24sp" />
</LinearLayout>